# pub_lib

./: .gitignore  ARCHITECTURE.md  README.md  __init__.py  hypothesis_testing.py  pyproject.toml
assignment_specific/beyond_noise_addition/: utils.py  visualizations.py
assignment_specific/dp_as_hypothesis_testing/: __init__.py  utils.py
assignment_specific/dp_sgd/: utils.py
assignment_specific/early_stopping/: utils.py
assignment_specific/exponential_mechanism/: __init__.py  utils.py  visualizations.py
assignment_specific/k_anon/: k_anon_visualization.py
assignment_specific/ml_and_overfitting/: __init__.py  utils.py  visualizations.py
assignment_specific/privacy_auditing/: __init__.py  animations.py  lecture_figures.py  utils.py  visualizations.py
assignment_specific/private_estimation/: __init__.py  audit_embed_scenes.py  embed_interactives.py  lecture_figures.py  utils.py  visualizations.py
assignment_specific/private_subgroup_comparisons/: __init__.py  lecture_figures.py  mechanisms.py  witnesses.py
assignment_specific/reconstruction/: reconstruction_3d_visualization.py  reconstruction_lecture_visualization.py  reconstruction_utilities.py  reconstruction_visualization.py
assignment_specific/smarter_noise_addition/: smarter_noise_addition_utils.py
attacks/membership_inference/: classical_auditing_utils.py  elements_selection.py  one_run_auditing.py
attacks/reconstruction/: geometry.py  instances.py  reconstruction_attacks.py  solvers.py
k_anon/: anonymizer.py
ml/: data_types.py  dp_utils.py  mnist_utils.py  models.py  training_utils.py
ml/requires_tensorflow/: dnn_models.py  dp_sgd.py  early_stopping_utils.py  utils.py  visualizations.py
privacy_mechanisms/: above_threshold.py  above_threshold_online.py  exponential_mechanism.py  noise.py  synthetic_data.py
resources/: Healthcare_preprocess.csv
visualization/: animation_display.py  animation_embed.py  external_app_embed.py  interactive.py  interactive_matplotlib.py  interactive_plot.py  interactive_widgets.py  ml_plots.py  ml_visualization.py  one_run_auditing.py  plot_inventory.py  plot_styles.py  privacy_plots.py  private_visualization.py  registry.py  roc_plots.py  statistical_plots.py
