[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libdpy"
version = "0.2.13"
description = "A comprehensive library for Differential Privacy and Privacy-Preserving Machine Learning"
readme = "README.md"
requires-python = ">=3.10.11"
authors = [
    {name = "Applied Privacy Course Team"}
]
keywords = ["differential-privacy", "privacy", "machine-learning", "dp-sgd", "k-anonymity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=2.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.0.0",
    "anonypy>=0.2.1",
    "tqdm>=4.60.0",
    "nbformat>=4.2.0",
]

[project.optional-dependencies]
notebook = [
    "ipywidgets>=7.6.0",
    "anywidget>=0.9.18",
]
ml = [
    "tensorflow>=2.20.0",
    "dp-accounting",
]

[project.urls]
Homepage = "https://github.com/applied-dp-course/pub_lib"
Documentation = "https://github.com/applied-dp-course/pub_lib"
Repository = "https://github.com/applied-dp-course/pub_lib"
Issues = "https://github.com/applied-dp-course/pub_lib/issues"

[tool.setuptools]
package-dir = {libdpy = "."}
packages = [
    "libdpy",
    "libdpy.visualization",
    "libdpy.assignment_specific",
    "libdpy.assignment_specific.dp_as_hypothesis_testing",
    "libdpy.assignment_specific.exponential_mechanism",
    "libdpy.assignment_specific.ml_and_overfitting",
    "libdpy.privacy_mechanisms",
    "libdpy.ml",
    "libdpy.k_anon",
    "libdpy.attacks",
    "libdpy.assignment_specific.smarter_noise_addition",
    "libdpy.assignment_specific.beyond_noise_addition",
    "libdpy.assignment_specific.k_anon",
    "libdpy.assignment_specific.privacy_auditing",
    "libdpy.assignment_specific.private_estimation",
    "libdpy.assignment_specific.private_subgroup_comparisons",
    "libdpy.assignment_specific.reconstruction",
    "libdpy.ml.requires_tensorflow",
    "libdpy.attacks.membership_inference",
    "libdpy.attacks.reconstruction",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = "\\.(py|pyi)$"
skip-string-normalization = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
no_strict_optional = false
plugins = ["numpy.typing.mypy_plugin"]
exclude = [
  "^.*\\.ipynb$",
  "^venv/",
  "^.venv/",
  "^build/",
  "^dist/",
]

[tool.isort]
profile = "black"
line_length = 100

[tool.setuptools.package-data]
# Ship the course datasets inside the installed libdpy package so notebooks can load them
# everywhere (local editable installs and Colab's pip install from pub_lib alike).
libdpy = ["resources/*.csv"]
